Current Version: @VERSION@

ctags-@VERSION@ (@DATE@)
* Added support for new "detachable" keyword [Eiffel].
* Fixed parsing of comments after import statements and other tags, contributed by Huandari Lopez to Geany [Python].
* Fixed PHP parser to ignore keywords inside comments [PHP, Bug #1795926].
* Fixed regular expressions for Ant so they won't span multiple tags [Ant].
* Fixed infinite loop with malformed Makefiles, contributed by Martin Dorey [Make, Bug #2959889].
* Fixed Verilog parameter parsing, contributed by Nicolas Vincent [Verilog, Patch #2747828].
* Enabled Large File System support. [Bug #3062068]

ctags-5.8 (09 Jul 2009)
* Removed ".ml" as a Lisp extension (now OCaml) [Lisp].
* Added support for Ant language, contributed by David Fishburn.
* Added support for DOS Batch language, contributed by David Fishburn.
* Added support for Flex (Adobe) language, contributed by David Fishburn.
* Added support for MATLAB language, contributed by David Fishburn.
* Added support for Objective Camel (OCaml), provided by Vincent Berthoux [Patch #2738723].
* Added support for TeX language, contributed by David Fishburn.
* Added support for VHDL language, contributed by Nicolas Vincent [Bug #1943306].
* Added support for Pyrex/Cython declarations [Python].
* Added support for "v" kind, for variables [Python].
* Added support for class and member variables [PHP, Bug #1037086].
* Added support for recent enhancements to Eiffel language [Eiffel].
* Added support for ASP classes, contributed by Zendhi Nagao; changes meaning of 'c' kind flag [ASP].
* Added regex support when compiling with MinGW. Gnu regex module now included in all distributions.
* Fixed detection of triple strings inside other strings [Python, Bug #1988130].
* Fixed an endless loop with comments in triple strings [Python, Bug #1988027].
* Fixed bug where functions were sometimes seen as methods [Python, Bug #1988026].